README.md was changed and fix mistakes